display-inline stuff

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,8 @@
     padding: 10px;
     margin: 10px;
 }
+.display-block {
+    display: block;
+    background-color: yellow;
+    padding: 10px;
+}
